# shelfspace

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  shelf.py
docs/: STEAM_API_SETUP.md
shelfspace/: app_ctx.py  browser.py  cache.py  esimations.py  estimations.py  gui_main.py  models.py  secrets.json.example  settings.py  test.ipynb  utils.py
shelfspace/apis/: base.py  goodreads.py  hltb.py  notion.py  secrets.py  steam.py  trakt.py
