[tool.poetry]
name = "shelfspace"
version = "0.1.0"
description = ""
authors = ["Oleksii 'LXj' Aleksieiyev <gotletter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^1.10.8"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
